[gd_scene load_steps=4 format=2]

[ext_resource path="res://BlueEndPoint.gd" type="Script" id=1]
[ext_resource path="res://end-box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="BlueEndPoint" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_BlueEndPoint_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
